--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
             android:exported="true"
             android:screenOrientation="unspecified"
             android:theme="@style/Theme.MDP">
+        </activity>
+
+        <activity
+            android:name=".assignment3.AmazonLoginActivity"
+            android:exported="true"
+            android:screenOrientation="unspecified"
+            android:theme="@style/Theme.MDP">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
