--- a/assignment5/src/main/AndroidManifest.xml
+++ b/assignment5/src/main/AndroidManifest.xml
@@ -15,6 +15,18 @@
             android:screenOrientation="unspecified"
             android:theme="@style/Theme.MDP.5" />
 
+        <activity
+            android:name=".cart.ProductActivity"
+            android:exported="true"
+            android:screenOrientation="unspecified"
+            android:theme="@style/Theme.MDP.5" />
+
+        <activity
+            android:name=".cart.ProductDetailsActivity"
+            android:exported="true"
+            android:screenOrientation="unspecified"
+            android:theme="@style/Theme.MDP.5" />
+
     </application>
 
 </manifest>
