--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".app.MainActivity"
+            android:name=".app.ui.MainActivity"
             android:exported="true"
             android:screenOrientation="unspecified"
             android:theme="@style/Theme.MDP">
