- migrate assigment 7 to compose.

--- a/assignment7/src/main/AndroidManifest.xml
+++ b/assignment7/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <application>
         <activity
-            android:name=".animal.AnimalKingdomActivity"
+            android:name=".animal.ui.AnimalKingdomActivity"
             android:exported="true"
             android:screenOrientation="unspecified"
             android:theme="@style/Theme.MDP.7" />
