--- a/assignment4/src/main/AndroidManifest.xml
+++ b/assignment4/src/main/AndroidManifest.xml
@@ -10,14 +10,13 @@
             android:theme="@style/Theme.MDP.4" />
 
         <activity
-            android:name=".CreateAccountActivity"
+            android:name=".createaccount.CreateAccountActivity"
             android:exported="true"
             android:screenOrientation="unspecified"
             android:theme="@style/Theme.MDP.4" />
 
-
         <activity
-            android:name=".SignInActivity"
+            android:name=".signin.SignInActivity"
             android:exported="true"
             android:screenOrientation="unspecified"
             android:theme="@style/Theme.MDP.4" />
